crates/omnifs-cli/tests/snapshots/cli_transcripts__non_interactive_mutation_refusal.snap
---
source: crates/omnifs-cli/tests/cli_transcripts.rs
expression: "fixture.transcript(&fixture.run(&[\"attachment\", \"add\"]))"
---
exit: 4
stdout:
stderr:
✗ interactive resource mutations require a terminal. Use omnifs plan <file> and omnifs apply <file> --yes for
automation.
