crates/omnifs-cli/tests/snapshots/cli_transcripts__retired_fs_usage_error.snap
---
source: crates/omnifs-cli/tests/cli_transcripts.rs
expression: "fixture.transcript(&fixture.run(&[\"fs\", \"attach\"]))"
---
exit: 2
stdout:
stderr:
error: unrecognized subcommand 'fs'

Usage: omnifs [OPTIONS] [COMMAND]

For more information, try '--help'.
