crates/omnifs-cli/tests/snapshots/cli_transcripts__status_follow_conflict.snap
---
source: crates/omnifs-cli/tests/cli_transcripts.rs
expression: "fixture.transcript(&fixture.run(&[\"status\", \"--follow\", \"--revision\", \"7\",\n\"--action\", \"00000000000000000000000000000000\",]))"
---
exit: 2
stdout:
stderr:
error: the argument '--revision <REVISION>' cannot be used with '--action <ACTION>'

Usage: omnifs status --follow --revision <REVISION>

For more information, try '--help'.
