crates/omnifs-cli/tests/snapshots/cli_transcripts__status_stopped.snap
---
source: crates/omnifs-cli/tests/cli_transcripts.rs
expression: "fixture.transcript(&fixture.run(&[\"status\"]))"
---
exit: 0
stdout:
omnifs  $OMNIFS_HOME                                            ○ stopped
0 mounts configured

Mounts  none configured
  (none)

stderr:
